# raytracing

./: Cargo.toml  README.md
bench_results/: multithread-fatlto  multithread-nolto  singlethread-fatlto  singlethread-nolto
src/: color.rs  config.rs  hit.rs  lib.rs  main.rs  material.rs  ray.rs  screen.rs  shape.rs  vec3.rs
