[package]
name = "raytracing"
version = "0.1.0"
authors = ["Arif Roktim <arifrroktim@gmail.com>"]
edition = "2018"

[dependencies]
rand_distr = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.minifb]
version = "0.18.0"
default-features = false
features = ["x11"]

[dependencies.rand]
version = "0.7.3"
default-features = false
features = ["std", "small_rng"]

