[package]
name = "raytracing"
version = "0.1.0"
authors = ["Arif Roktim <arifrroktim@gmail.com>"]
edition = "2018"

[profile.dev]
# Required for dev builds to be actually usable
opt-level = 2

[profile.release]
lto = "fat"

[dependencies]
rand_distr = "0.3.0"
rayon = "1.4.0"
structopt = "0.3.17"
once_cell = "1.4.1"
strum = "0.19.2"
strum_macros = "0.19.2"
dyn-clone = "1.0.2"

[dependencies.rand]
version = "0.7.3"
features = ["small_rng"]

[dependencies.minifb]
version = "0.18.0"
default-features = false
features = ["x11"]
